--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="pref_temp_units_imperial">imperial</string>
     <string name="pref_location_category_title">Location</string>
     <string name="action_map" translatable="false">Map</string>
-
+    <string name="action_share">Share</string>
 
     <string-array name="pref_temp_units_entries">
         <item>Metric</item>
